<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <Button
        android:id="@+id/btn_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="89dp"
        android:text="@string/minus"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_p"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/plus"
        app:layout_constraintStart_toStartOf="@+id/num2"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/div"
        app:layout_constraintBottom_toBottomOf="@+id/btn_mul"
        app:layout_constraintStart_toStartOf="@+id/btn_m" />

    <Button
        android:id="@+id/btn_mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        android:text="@string/mul"
        app:layout_constraintEnd_toEndOf="@+id/tv_res"
        app:layout_constraintTop_toBottomOf="@+id/btn_p" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/num1"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/num2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/num2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/btn_m"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <TextView
        android:id="@+id/tv_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/result"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mul" />
</androidx.constraintlayout.widget.ConstraintLayout>