<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calc2">

    <EditText
        android:id="@+id/in_n1"
        android:layout_width="219dp"
        android:layout_height="63dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/num1"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/in_n2"
        android:layout_width="208dp"
        android:layout_height="71dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/num2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/in_n1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/in_n1"
        app:layout_constraintTop_toBottomOf="@+id/in_n1" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/plus"
        app:layout_constraintStart_toStartOf="@+id/in_n2"
        app:layout_constraintTop_toBottomOf="@+id/in_n2" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/mul"
        app:layout_constraintEnd_toEndOf="@+id/btn1"
        app:layout_constraintStart_toStartOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@+id/btn1"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="@+id/btn1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/div"
        app:layout_constraintBottom_toBottomOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toTopOf="@+id/btn3" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="연산결과 : 0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

</androidx.constraintlayout.widget.ConstraintLayout>